# charity

./: .gitignore  Makefile  main.tf  manage.py  pyproject.toml  terraform.tfstate.backup
charity/: asgi.py  middlewares.py  settings.py  sitemap.py  urls.py  wsgi.py
infrastructure/: database.tf  iam.tf  main.tf  network.tf  output.tf  provider.tf  storage.tf  variables.tf
main_app/: admin.py  models.py  serializers.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_category_description_category_en_description_and_more.py  0003_alter_project_images.py  0004_founder.py  0005_news.py  0006_founder_picture.py  0007_rename_projectimage_image_category_picture_and_more.py  0008_category_slug_news_slug_project_slug.py  0009_category_created_at_category_updated_at.py  0010_media.py
tests/: test_endpoints.py
